UI paper-cut fix - center-align text on the finish screen of sidebar activate panel (#5568)

--- a/src/sidebar/activateRecipe/ActivateRecipePanel.module.scss
+++ b/src/sidebar/activateRecipe/ActivateRecipePanel.module.scss
@@ -35,6 +35,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .footer {
